# JsonCppQt

./: CMakeLists.txt  README.txt
progs/: CMakeLists.txt  test1-qt.cpp  test1.cpp
